--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -8,6 +8,7 @@
     <link href="css/modals.css" rel="stylesheet" type="text/css" />
     <link href="css/autoDark.css" rel="stylesheet" type="text/css"  id="autoDark" />
     <link href="css/alwaysDark.css" rel="stylesheet" type="text/css" id="alwaysDark" disabled="true"/>
+    <link href="css/cyberpunk.css" rel="stylesheet" type="text/css" id="cyberpunk" disabled="true"/>
     <base />
 </head>
 <body>
@@ -355,6 +356,7 @@
                         <select id="themeColorTag">
                             <option class="i18n" value="LightMode">__MSG_option_ID_Theme_Always_Light__</option>
                             <option class="i18n" value="DarkMode">__MSG_option_ID_Theme_Always_Dark__</option>
+                            <option class="i18n" value="CyberpunkMode">Cyberpunk</option>
                             <option class="i18n" selected="true" value="">__MSG_option_ID_Theme_OS_Selection__</option>
                         </select>
                     </td>
