Refactor Library.js into three separate classes
- LibraryStorage.js: Storage operations, EPUB handling, data management
- LibraryBookData.js: Book content extraction, chapter parsing, selection
- LibraryUI.js: User interface rendering, event handling, display logic

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -724,7 +724,9 @@
         <script src="js/DefaultParserUI.js"></script>
         <script src="js/ProgressBar.js"></script>
         <script src="js/Parser.js"></script>
-        <script src="js/Library.js"></script>
+        <script src="js/LibraryStorage.js"></script>
+        <script src="js/LibraryBookData.js"></script>
+        <script src="js/LibraryUI.js"></script>
 
         <!-- These parsers are (or might be) used as base for other pareser-->
         <script src="js/parsers/WordpressBaseParser.js"></script>
