Chapter viewer - style scrollbar, add scroll percent, don't scroll background

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -627,6 +627,7 @@
             </div>
             <div id="chapterViewerContent"></div>
         </div>
+        <div id="scrollPercentage">0%</div>
     </div>
 
     <!-- Cache Options Modal -->
