Add more actions menu to chapter list header and option to download all as html

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -612,6 +612,15 @@
                             <span id="deleteAllCachedChapters"></span>
                             <span class="tooltipText" id="deleteAllTooltip">__MSG_tooltip_Delete_All_Cached__</span>
                         </div>
+                        <div class="header-more-actions-wrapper clickable-icon" id="headerMoreActionsWrapper">
+                            <span id="headerMoreActionsIcon"></span>
+                            <div class="header-more-actions-menu" id="headerMoreActionsMenu">
+                                <div class="menu-item" id="downloadSelectedChaptersHtml">
+                                    <span id="downloadSelectedIcon"></span>
+                                    <span>Download Selected Chapters as Individual HTML Files</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
