--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -608,16 +608,20 @@
                     <div class="chapter-title-column i18n">__MSG_column_Title__</div>
                     <div class="chapter-url-column i18n" hidden="true">__MSG_column_URL__</div>
                     <div class="chapter-status-column">
-                        <div class="tooltip-wrapper delete-all-tooltip clickable-icon">
-                            <span id="deleteAllCachedChapters"></span>
-                            <span class="tooltipText" id="deleteAllTooltip">__MSG_tooltip_Delete_All_Cached__</span>
-                        </div>
                         <div class="header-more-actions-wrapper clickable-icon" id="headerMoreActionsWrapper">
                             <span id="headerMoreActionsIcon"></span>
                             <div class="header-more-actions-menu" id="headerMoreActionsMenu">
+                                <div class="menu-item" id="deleteSelectedCachedChaptersMenuItem">
+                                    <span id="deleteSelectedCachedIcon"></span>
+                                    <span>Delete Selected Cached Chapters</span>
+                                </div>
+                                <div class="menu-item" id="deleteAllCachedChaptersMenuItem">
+                                    <span id="deleteAllCachedIcon"></span>
+                                    <span>Delete All Cached Chapters on Page</span>
+                                </div>
                                 <div class="menu-item" id="downloadSelectedChaptersHtml">
-                                    <span id="downloadSelectedIcon"></span>
-                                    <span>Download Selected Chapters as Individual HTML Files</span>
+                                  <span id="downloadSelectedIcon"></span>
+                                  <span>Download Selected Chapters as Individual HTML Files</span>
                                 </div>
                             </div>
                         </div>
