--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -611,6 +611,10 @@
                         <div class="header-more-actions-wrapper clickable-icon" id="headerMoreActionsWrapper">
                             <span id="headerMoreActionsIcon"></span>
                             <div class="header-more-actions-menu" id="headerMoreActionsMenu">
+                                <div class="menu-item" id="downloadSelectedChaptersCache">
+                                    <span id="downloadSelectedCacheIcon"></span>
+                                    <span>Download Selected Chapters</span>
+                                </div>
                                 <div class="menu-item" id="deleteSelectedCachedChaptersMenuItem">
                                     <span id="deleteSelectedCachedIcon"></span>
                                     <span>Delete Selected Cached Chapters</span>
@@ -620,7 +624,7 @@
                                     <span>Delete All Cached Chapters on Page</span>
                                 </div>
                                 <div class="menu-item" id="downloadSelectedChaptersHtml">
-                                  <span id="downloadSelectedIcon"></span>
+                                  <span id="downloadSelectedHtmlIcon"></span>
                                   <span>Download Selected Chapters as Individual HTML Files</span>
                                 </div>
                             </div>
