--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -189,7 +189,7 @@
               <button id="packEpubButton" class="expandedButton">__MSG_button_Pack_EPUB__</button>
               <button id="downloadChaptersButton" class="expandedButton">__MSG_button_Download_Chapters__</button>
               <button data-libclick="yes" id="LibAddToLibrary" class="expandedButton">__MSG_button_Add_to_Library__</button>
-              <button data-libclick="yes" id="LibPauseToLibrary" class="expandedButton" hidden="true">__MSG_button_Pause_to_Library__</button>
+              <button id="stopDownloadButton" class="expandedButton" disabled="true">__MSG_button_Stop_Download__</button>
             </div>
           </div>
         </section>
