Add auto-detect library book and enter "library mode"

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -95,6 +95,18 @@
                 <p class="warning"><strong>For more details, and a worked example, click the "Help" button above.</strong></p>
             </div>
         </section>
+        <section id="libraryBookIndicator" class="library-book-banner" hidden="true">
+            <div class="library-banner-top-row">
+                <div class="library-banner-left">
+                    <span class="library-banner-icon">📚</span>
+                    <span class="library-banner-text i18n">__MSG_label_library_mode__</span>
+                </div>
+                <button class="library-banner-button i18n" id="exitLibraryModeButton">__MSG_button_exit_library_mode__</button>
+            </div>
+            <div class="library-banner-title-row">
+                <span class="library-book-title" id="libraryBookTitle"></span>
+            </div>
+        </section>
         <section id="inputSection">
             <div class="form-container">
                 <div class="form-field">
