--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebToEpub</title>
     <link href="css/default.css" rel="stylesheet" type="text/css" />
     <link href="css/chapterUrlsUI.css" rel="stylesheet" type="text/css" />
@@ -587,7 +588,7 @@
                 </td>
               </tr>
             </table>
-            <div>
+            <div id="chapterSelectControlButtons">
               <label>
                 <input id="selectAllUrlsCheckbox" type="checkbox" />
                 <span class="i18n">__MSG_button_Select_All__</span>
