Responsive compact library

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -213,7 +213,7 @@
         </section>
 
         <!-- Hidden Section - Library -->
-        <section id="hiddenBibSection" hidden="true">
+        <section id="libraryExpandableSection" hidden="true">
             <div id="LibraryTemplate" hidden="true">
                 <br>
                 <table>
@@ -301,7 +301,7 @@
                     <td><input id="LibShowAdvancedOptionsCheckbox" type="checkbox" name="LibShowAdvancedOptionsCheckbox" checked="false"></td>
                     <td><p>__MSG_label_Lib_Show_Advanced_Library_Options__</p></td>
                 </tr>
-                <tr id="LibShowCompactViewRow" hidden="true">
+                <tr id="LibShowCompactViewRow">
                     <td><input id="LibShowCompactViewCheckbox" type="checkbox" name="LibShowCompactViewCheckbox" checked="false"></td>
                     <td><p>__MSG_label_Lib_Compact_View__</p></td>
                 </tr>
