Fix chapter inclusion logic

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -815,6 +815,7 @@
         <script src="js/ImageCollector.js"></script>
         <script src="js/Imgur.js"></script>
         <script src="js/SvgIcons.js"></script>
+        <script src="js/ChapterInclusionLogic.js"></script>
         <script src="js/ChapterUrlsUI.js"></script>
         <script src="js/ChapterViewer.js"></script>
         <script src="js/ChapterCache.js"></script>
