Partial library book editing: delete and refresh chapter

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -1181,6 +1181,7 @@
         <script src="js/CoverImageUI.js"></script>
         <script src="js/parsers/SonakoParser.js"></script>
         <script src="js/EpubPacker.js"></script>
+        <script src="js/EpubUpdater.js"></script>
         <script src="js/main.js"></script>
     </span>
 </body>
