Full width textarea for "add to library" option

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -754,6 +754,9 @@
                     </div>
                     <div class="options-modal-row">
                         <div class="options-modal-label">Add novels to Library</div>
+                        <div class="options-modal-label"></div>
+                    </div>
+                    <div class="options-modal-row textarea-full-width-row">
                         <div class="options-modal-value">
                             <textarea id="LibAddListToLibraryInput" type="text" placeholder="Add one novel URL per line"></textarea>
                         </div>
