Streamline header "more actions" menu options

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -616,17 +616,13 @@
                         <div class="header-more-actions-wrapper clickable-icon" id="headerMoreActionsWrapper">
                             <span id="headerMoreActionsIcon"></span>
                             <div class="header-more-actions-menu" id="headerMoreActionsMenu">
-                                <div class="menu-item" id="downloadSelectedChaptersCache">
-                                    <span id="downloadSelectedCacheIcon"></span>
-                                    <span>Download Selected Chapters</span>
+                                <div class="menu-item" id="deleteSelectedChaptersMenuItem">
+                                    <span id="deleteSelectedChaptersIcon"></span>
+                                    <span>Delete Selected Chapters</span>
                                 </div>
-                                <div class="menu-item" id="deleteSelectedCachedChaptersMenuItem">
-                                    <span id="deleteSelectedCachedIcon"></span>
-                                    <span>Delete Selected Cached Chapters</span>
-                                </div>
-                                <div class="menu-item" id="deleteAllCachedChaptersMenuItem">
-                                    <span id="deleteAllCachedIcon"></span>
-                                    <span>Delete All Cached Chapters on Page</span>
+                                <div class="menu-item" id="deleteAllChaptersMenuItem">
+                                    <span id="deleteAllChaptersIcon"></span>
+                                    <span>Delete All Chapters on Page</span>
                                 </div>
                                 <div class="menu-item" id="downloadSelectedChaptersHtml">
                                   <span id="downloadSelectedHtmlIcon"></span>
