Refactor to move and rename some library methods

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -727,7 +727,7 @@
                     <div class="options-modal-row">
                         <div class="options-modal-label"></div>
                         <div class="options-modal-value">
-                            <button id="libexportallModal" class="i18n">__MSG_button_Lib_Template_Export_Library__</button>
+                            <button id="libExportAllModal" class="i18n">__MSG_button_Lib_Template_Export_Library__</button>
                         </div>
                     </div>
                     <div class="options-modal-row">
