Default author as user preference

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -349,6 +349,10 @@
                     <td>__MSG_label_Custom_Filename__</td>
                     <td><input id="CustomFilenameInput" type="text" name="CustomFilenameInput"> <button id="CustomFilenameHelpButton">__MSG_button_Help__</button></td>
                 </tr>
+                <tr>
+                    <td>__MSG_label_Default_Author_Name__</td>
+                    <td><input id="defaultAuthorNameInput" type="text" name="defaultAuthorNameInput" size="30" /></td>
+                </tr>
                 <tr id="translatorRow" hidden="true">
                     <td>__MSG_label_Translator__</td>
                     <td><input id="translatorInput" type="text" name="translatorInput" size="80" /></td>
